<resources>
    <string name="app_name">TouchHunter</string>

    <string name="hello_world">Hello world!</string>

    <string name="start_hunter_button">Start hunter</string>
    <string name="exit_button">Exit</string>
    <string name="title_activity_image_slider">ImageSliderActivity</string>
    <string name="action_settings">Settings</string>

    <string name="stop_service_button">Stop hunter service</string>

    <string name="time_before_play_slider">Start play image slider after no operation for seconds</string>
    <string name="five_seconds">5s</string>
    <string name="ten_seconds">10s</string>
    <string name="fifteen_seconds">15s</string>
    <string name="twenty_seconds">20s</string>
    <string name="thirty_seconds">30s</string>
    <string name="sixty_seconds">60s</string>
    <string name="two_minutes">120s</string>
    <string name="five_minutes">300s</string>
    <string name="ten_minutes">600s</string>

    <string name="time_for_each_image">Seconds for each image</string>

    <string name="instruction_text_view">Put the images you want to display while there`s no operation in a folder named sliderimages and then place the folder in the root directory(/sdcard) or the external SD card`s root directory(/mnt/exstd/). </string>



</resources>
