<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_before_play_slider"
        />
    <View
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/material_blue_grey_800"/>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioGroup
            android:id="@+id/slider_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/thirty_seconds_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/thirty_seconds"/>

            <RadioButton
                android:id="@+id/sixty_seconds_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sixty_seconds"/>

            <RadioButton
                android:id="@+id/two_minutes_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/two_minutes"/>

            <RadioButton
                android:id="@+id/five_minutes_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/five_minutes"/>

            <RadioButton
                android:id="@+id/ten_minutes_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ten_minutes"/>
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_for_each_image"
        />
    <View
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/material_blue_grey_800"/>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioGroup
            android:id="@+id/image_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/image_five_seconds_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/five_seconds"/>

            <RadioButton
                android:id="@+id/image_ten_seconds_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ten_seconds"/>

            <RadioButton
                android:id="@+id/image_fifteen_seconds_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fifteen_seconds"/>

            <RadioButton
                android:id="@+id/image_twenty_seconds_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/twenty_seconds"/>

            <RadioButton
                android:id="@+id/image_thirty_seconds_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/thirty_seconds"/>
        </RadioGroup>

    </LinearLayout>

    <View
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/material_blue_grey_800"/>

    <TextView
        android:id="@+id/instruction"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text_view"/>

    <Button
        android:id="@+id/start_hunter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_hunter_button"/>

    <Button
        android:id="@+id/stop_hunter_service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service_button"/>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_button"/>

</LinearLayout>
